--- a/src/components/stylesheets/portfolio.scss
+++ b/src/components/stylesheets/portfolio.scss
@@ -172,6 +172,14 @@ $p: 1.4rem;
   .card3 {
     width: 50%;
   }
+
+  .card4 {
+    width: 50%;
+  }
+
+  .card5 {
+    width: 50%;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -188,6 +196,14 @@ $p: 1.4rem;
       width: 60%;
     }
     .card3 {
+      width: 60%;
+    }
+
+    .card4 {
+      width: 60%;
+    }
+
+    .card5 {
       width: 60%;
     }
   }
@@ -212,6 +228,14 @@ $p: 1.4rem;
   .card3 {
     width: 78%;
   }
+
+  .card4 {
+    width: 78%;
+  }
+
+  .card5 {
+    width: 78%;
+  }
 }
 
 @media screen and (min-width: 733px) and (max-width: 734px) {
@@ -231,6 +255,14 @@ $p: 1.4rem;
   }
 
   .card3 {
+    width: 78%;
+  }
+
+  .card4 {
+    width: 78%;
+  }
+
+  .card5 {
     width: 78%;
   }
 }
@@ -254,6 +286,14 @@ $p: 1.4rem;
   .card3 {
     width: 85%;
   }
+
+  .card4 {
+    width: 85%;
+  }
+
+  .card5 {
+    width: 85%;
+  }
 }
 
 @media screen and (min-width: 649px) and (max-width: 667px) {
@@ -273,6 +313,14 @@ $p: 1.4rem;
   }
 
   .card3 {
+    width: 85%;
+  }
+
+  .card4 {
+    width: 85%;
+  }
+
+  .card5 {
     width: 85%;
   }
 }
