--- a/src/components/stylesheets/portfolio.scss
+++ b/src/components/stylesheets/portfolio.scss
@@ -153,58 +153,128 @@ $p: 1.4rem;
   }
 }
 
-@media screen and (min-width: 1024px) {
-  .portfolio-section {
-    img {
-      width: 99%;
-      margin-left: 3px;
-    }
-  }
-
-  .card1 {
-    width: 50%;
-  }
-
-  .card2 {
-    width: 50%;
-  }
-
-  .card3 {
-    width: 50%;
-  }
-
-  .card4 {
-    width: 50%;
-  }
-
-  .card5 {
-    width: 50%;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 1025px) {
   .portfolio-section {
     img {
       width: 98%;
+      height: 40%;
+      margin-left: 3px;
+    }
+
+    h1 {
+      display: flex;
+      justify-content: center;
+      font-size: 3rem;
+      margin-top: 60px;
+    }
+
+    .card-text {
+      font-size: 1.2rem;
+    }
+    .projects p {
+      font-size: $p;
+    }
+
+    .previous-experience li {
+      font-size: $p;
+    }
+  }
+
+  .row1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .row2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  .card1 {
+    width: 28%;
+  }
+
+  .card2 {
+    width: 28%;
+    margin: 0 20px;
+  }
+
+  .card3 {
+    width: 28%;
+  }
+
+  .card4 {
+    width: 28%;
+  }
+
+  .card5 {
+    width: 28%;
+    margin-right: 20px;
+  }
+
+  .projects p {
+    display: flex;
+    justify-content: center;
+  }
+
+  .previous-experience {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  .previous-experience1 li {
+    margin-left: 80px;
+  }
+  .previous-experience2 li {
+    margin-left: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .portfolio-section {
+    img {
+      width: 95%;
+      height: 35%;
       margin-left: 5px;
     }
 
     .card1 {
-      width: 60%;
+      width: 44%;
     }
     .card2 {
-      width: 60%;
+      width: 44%;
+      margin: 0 10px;
     }
     .card3 {
-      width: 60%;
+      width: 44%;
     }
 
     .card4 {
-      width: 60%;
+      width: 44%;
     }
 
     .card5 {
-      width: 60%;
+      width: 44%;
+      margin-right: 10px;
+    }
+    .card-text {
+      font-size: 0.9rem;
+    }
+    .card-title {
+      font-size: 1rem;
+    }
+
+    .row1 {
+      display: flex;
+      flex-direction: row;
+      justify-content: left;
+    }
+    .row2 {
+      display: flex;
+      flex-direction: row;
+      justify-content: left;
+      margin-top: 20px;
     }
   }
 }
