--- a/src/components/stylesheets/contact.scss
+++ b/src/components/stylesheets/contact.scss
@@ -66,3 +66,19 @@ $p: 1.4rem;
     fill: rgb(46, 46, 46);
   }
 }
+
+@media screen and (min-width: 1023px) {
+  .contact-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+  }
+
+  .contact-section a {
+    font-size: $p;
+  }
+  .contact-section h1 {
+    font-size: 3rem;
+  }
+}
