--- a/src/components/stylesheets/portfolio.scss
+++ b/src/components/stylesheets/portfolio.scss
@@ -1,17 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kavivanar&display=swap");
-
-// COLOURS
-$yellow: #ced3b4;
-$pink: #b06d81;
-
-//FONT FAMILY
-$title-font: "Kavivanar";
-$font: "Montserrat", sans-serif;
-
-//FONT SIZE
-$h1: 2rem;
-$p: 1.4rem;
+@import "../stylesheets/global.scss";
 
 .portfolio-section {
   display: flex;
@@ -42,6 +31,7 @@ $p: 1.4rem;
     font-family: $font;
     font-size: $p;
     margin-left: 10px;
+    margin-top: 10px;
   }
 
   .card-text {
@@ -81,67 +71,70 @@ $p: 1.4rem;
   }
 
   .card1 {
-    border-color: #67705c;
-    border-style: solid;
-    border-radius: 30px;
-  }
-
-  .sloth-button.btn.btn-primary {
-    background-color: #67705c;
-  }
-
-  .card2 {
     border-color: #394a4d;
     border-style: solid;
     border-radius: 30px;
-    margin-top: 2px;
-    margin-bottom: 2px;
-  }
-
-  .card4 {
-    margin-top: 2px;
-    margin-bottom: 2px;
   }
 
   .guide-button.btn.btn-primary {
     background-color: #394a4d;
   }
 
-  .card3 {
+  .card2 {
     border-color: $pink;
     border-style: solid;
     border-radius: 30px;
+    // margin-top: 2px;
+    margin-bottom: 2px;
   }
+
   .sissy-button.btn.btn-primary {
     background-color: $pink;
   }
 
-  .card4 {
-    border-color: #3a3c26;
+  .card3 {
+    border-color: #6e7048;
     border-style: solid;
     border-radius: 30px;
   }
 
   .groenhartig-button.btn.btn-primary {
-    background-color: #3a3c26;
+    background-color: #6e7048;
   }
 
-  .card5 {
+  .card4 {
+    //   margin-top: 2px;
+    margin-bottom: 2px;
+  }
+
+  .card4 {
     border-color: #d9bbb1;
     border-style: solid;
     border-radius: 30px;
   }
+
   .birthday-button.btn.btn-primary {
     background-color: #d9bbb1;
   }
 
-  .card6 {
+  .card5 {
     border-color: #d5a129;
     border-style: solid;
     border-radius: 30px;
   }
+
   .research-button.btn.btn-primary {
     background-color: #d5a129;
+  }
+
+  .card6 {
+    border-color: #47802b;
+    border-style: solid;
+    border-radius: 30px;
+  }
+
+  .eva-button.btn.btn-primary {
+    background-color: #47802b;
   }
 
   .projects p {
@@ -270,6 +263,7 @@ $p: 1.4rem;
     .card5 {
       width: 44%;
       margin-right: 10px;
+      margin-left: 10px;
     }
     .card6 {
       width: 44%;
@@ -298,129 +292,150 @@ $p: 1.4rem;
 @media screen and (min-width: 735px) and (max-width: 767px) {
   .portfolio-section {
     img {
-      width: 145vh;
+      width: 135vh;
       margin-left: 3px;
     }
   }
 
   .card1 {
-    width: 78%;
+    width: 73%;
+    margin-top: 10px;
   }
 
   .card2 {
-    width: 78%;
+    width: 73%;
+    margin-top: 10px;
   }
 
   .card3 {
-    width: 78%;
+    width: 73%;
+    margin-top: 10px;
   }
 
   .card4 {
-    width: 78%;
+    width: 73%;
+    margin-top: 10px;
   }
 
   .card5 {
-    width: 78%;
+    width: 73%;
+    margin-top: 10px;
   }
   .card6 {
-    width: 78%;
+    width: 73%;
   }
 }
 
 @media screen and (min-width: 733px) and (max-width: 734px) {
   .portfolio-section {
     img {
-      width: 135vh;
+      width: 105vh;
       margin-left: 2.5px;
     }
-  }
 
-  .card1 {
-    width: 78%;
-  }
+    .card1 {
+      width: 61%;
+      margin-top: 10px;
+    }
 
-  .card2 {
-    width: 78%;
-  }
+    .card2 {
+      width: 61%;
+      margin-top: 10px;
+    }
 
-  .card3 {
-    width: 78%;
-  }
+    .card3 {
+      width: 61%;
+      margin-top: 10px;
+    }
 
-  .card4 {
-    width: 78%;
-  }
+    .card4 {
+      width: 61%;
+      margin-top: 10px;
+    }
 
-  .card5 {
-    width: 78%;
-  }
-  .card6 {
-    width: 78%;
+    .card5 {
+      width: 61%;
+      margin-top: 10px;
+    }
+    .card6 {
+      width: 61%;
+    }
   }
 }
 
 @media screen and (min-width: 668px) and (max-width: 732px) {
   .portfolio-section {
     img {
-      width: 131vh;
+      width: 94vh;
       margin-left: 2px;
     }
   }
 
   .card1 {
-    width: 85%;
+    width: 61%;
+    margin-top: 10px;
   }
 
   .card2 {
-    width: 85%;
+    width: 61%;
+    margin-top: 10px;
   }
 
   .card3 {
-    width: 85%;
+    width: 61%;
+    margin-top: 10px;
   }
 
   .card4 {
-    width: 85%;
+    width: 61%;
+    margin-top: 10px;
   }
 
   .card5 {
-    width: 85%;
+    width: 61%;
+    margin-top: 10px;
   }
-
   .card6 {
-    width: 85%;
+    width: 61%;
+    margin-top: 10px;
   }
 }
 
 @media screen and (min-width: 649px) and (max-width: 667px) {
   .portfolio-section {
     img {
-      width: 160vh;
+      width: 140vh;
       margin-left: 2px;
     }
   }
 
   .card1 {
-    width: 85%;
+    width: 75%;
+    margin-top: 10px;
   }
 
   .card2 {
-    width: 85%;
+    width: 75%;
+    margin-top: 10px;
   }
 
   .card3 {
-    width: 85%;
+    width: 75%;
+    margin-top: 10px;
   }
 
   .card4 {
-    width: 85%;
+    width: 75%;
+    margin-top: 10px;
   }
 
   .card5 {
-    width: 85%;
+    width: 75%;
+    margin-top: 10px;
   }
+
   .card6 {
-    width: 85%;
+    width: 75%;
   }
 }
 
@@ -465,6 +480,25 @@ $p: 1.4rem;
       width: 48vh;
       margin-left: 5px;
     }
+    .card1 {
+      margin-top: 10px;
+    }
+
+    .card2 {
+      margin-top: 10px;
+    }
+
+    .card3 {
+      margin-top: 10px;
+    }
+
+    .card4 {
+      margin-top: 10px;
+    }
+
+    .card5 {
+      margin-top: 10px;
+    }
   }
 }
 @media screen and (min-width: 376px) and (max-width: 413px) {
@@ -479,6 +513,26 @@ $p: 1.4rem;
   .portfolio-section {
     img {
       width: 97%;
+    }
+
+    .card1 {
+      margin-top: 10px;
+    }
+
+    .card2 {
+      margin-top: 10px;
+    }
+
+    .card3 {
+      margin-top: 10px;
+    }
+
+    .card4 {
+      margin-top: 10px;
+    }
+
+    .card5 {
+      margin-top: 10px;
     }
   }
 }
