--- a/src/components/stylesheets/about.css
+++ b/src/components/stylesheets/about.css
@@ -31,7 +31,7 @@ li {
   font-size: 6rem;
   font-family: "Kavivanar";
   margin-bottom: 10px;
-  color: #b06d81;
+  color: #2c5606;
 }
 .about-section h1 {
   font-size: 1.8rem;
