--- a/src/components/stylesheets/contact.css
+++ b/src/components/stylesheets/contact.css
@@ -7,15 +7,11 @@
   margin-left: 20px;
 }
 
-/* .contact-section .resume {
-  margin-top: -30px;
-} */
-
 .contact-section a {
   font-family: "Kavivanar";
   font-size: 1.2rem;
   text-decoration: none;
-  color: #b06d81;
+  color: #2c5606;
 }
 .contact-section a:hover {
   color: rgb(31, 30, 30);
@@ -24,13 +20,14 @@
   color: 1.4rem;
   font-size: 2rem;
   font-family: "Kavivanar";
-  color: #b06d81;
+  color: #2c5606;
 }
 
 .contact-section .resume {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .contact-section p {
@@ -60,7 +57,7 @@
 }
 
 .social-media {
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .social-media .git {
   margin-left: 10px;
@@ -85,6 +82,6 @@
     font-size: 2.4rem;
   }
   .contact-section .resume {
-    margin-top: -30px;
+    margin-top: -20px;
   }
 }
