--- a/src/components/stylesheets/portfolio.css
+++ b/src/components/stylesheets/portfolio.css
@@ -1,12 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kavivanar&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Arvo&family=Roboto&display=swap");
 
 .portfolio-section {
   display: flex;
   flex-direction: column;
   margin-left: 20px;
   text-align: left;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   margin-right: 20px;
 }
 
@@ -15,45 +14,40 @@
   flex-direction: column;
   margin-left: 20px;
   text-align: left;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .portfolio-section h1 {
-  font-family: "Kavivanar";
+  font-family: "Arvo";
   margin-bottom: 25px;
   margin-top: 30px;
   color: #2c5606;
 }
 
 .card-title {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.4rem;
   margin-left: 10px;
   margin-top: 10px;
 }
 
 .card-text {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1rem;
   margin-left: 10px;
 }
 
 .portfolio-section img {
-  width: 48vh;
-  border-top-left-radius: 10% 10%;
-  border-top-right-radius: 10% 10%;
-  border-bottom-right-radius: 10% 10%;
-  border-bottom-left-radius: 10% 10%;
+  width: 42vh;
   margin-left: 4px;
   margin-top: 3px;
 }
 
 a.btn.btn-primary {
-  font-family: "Kavivanar";
+  font-family: "Arvo";
   font-size: 1rem;
   color: #000;
   text-decoration: none;
-  border-radius: 30px;
   height: 40px;
   width: 40%;
   margin: auto;
@@ -71,7 +65,7 @@ a.btn.btn-primary:hover {
 .card1 {
   border-color: #2c5606;
   border-style: solid;
-  border-radius: 30px;
+  border-width: 0.1rem;
 }
 
 .sissy-button.btn.btn-primary {
@@ -81,7 +75,7 @@ a.btn.btn-primary:hover {
 .card2 {
   border-color: #2c5606;
   border-style: solid;
-  border-radius: 30px;
+  border-width: 0.1rem;
   margin-bottom: 2px;
 }
 
@@ -92,7 +86,7 @@ a.btn.btn-primary:hover {
 .card3 {
   border-color: #2c5606;
   border-style: solid;
-  border-radius: 30px;
+  border-width: 0.1rem;
 }
 
 .emotus-button.btn.btn-primary {
@@ -100,13 +94,10 @@ a.btn.btn-primary:hover {
 }
 
 .card4 {
-  margin-bottom: 2px;
-}
-
-.card4 {
   border-color: #2c5606;
   border-style: solid;
-  border-radius: 30px;
+  margin-bottom: 2px;
+  border-width: 0.1rem;
 }
 
 .birthday-button.btn.btn-primary {
@@ -116,7 +107,7 @@ a.btn.btn-primary:hover {
 .card5 {
   border-color: #2c5606;
   border-style: solid;
-  border-radius: 30px;
+  border-width: 0.1rem;
 }
 
 .research-button.btn.btn-primary {
@@ -126,7 +117,7 @@ a.btn.btn-primary:hover {
 .card6 {
   border-color: #2c5606;
   border-style: solid;
-  border-radius: 30px;
+  border-width: 0.1rem;
 }
 
 .eva-button.btn.btn-primary {
@@ -146,7 +137,7 @@ a.btn.btn-primary:hover {
 }
 
 .previous-experience h1 {
-  font-family: "Kavivanar";
+  font-family: "Arvo";
   margin-bottom: 5px;
   margin-top: 30px;
   color: #b06d81;
@@ -156,7 +147,7 @@ li {
   font-size: 1rem;
 }
 
-/* from here */
+/* Responsive */
 @media screen and (min-width: 1025px) {
   .portfolio-section img {
     width: 98%;
@@ -167,7 +158,7 @@ li {
   h1 {
     display: flex;
     justify-content: left;
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     margin-top: 60px;
     margin-top: 25px;
   }
@@ -192,7 +183,7 @@ li {
     display: flex;
     flex-direction: row;
     justify-content: left;
-    margin-top: 20px;
+    margin-top: 10px;
   }
 
   .card1 {
@@ -264,6 +255,7 @@ li {
 
   .card4 {
     width: 44%;
+    margin-left: 10px;
   }
 
   .card5 {
@@ -296,8 +288,7 @@ li {
 
 @media screen and (min-width: 768px) and (max-width: 984px) {
   .portfolio-section img {
-    width: 95%;
-    height: 35%;
+    width: 30vh;
     margin-left: 5px;
   }
 
@@ -351,10 +342,6 @@ li {
     flex-direction: row;
     justify-content: left;
     margin-top: 20px;
-  }
-  .portfolio-section img {
-    width: 30vh;
-    margin-left: 3px;
   }
 }
 
@@ -428,7 +415,7 @@ li {
   }
 }
 
-@media screen and (min-width: 668px) and (max-width: 732px) {
+@media screen and (min-width: 669px) and (max-width: 732px) {
   .portfolio-section img {
     width: 94vh;
     margin-left: 2px;
@@ -464,9 +451,9 @@ li {
   }
 }
 
-@media screen and (min-width: 649px) and (max-width: 667px) {
+@media screen and (min-width: 649px) and (max-width: 668px) {
   .portfolio-section img {
-    width: 240vh;
+    width: 140vh;
     margin-left: 2px;
   }
 
@@ -503,10 +490,6 @@ li {
 @media screen and (min-width: 415px) and (max-width: 648px) {
   .portfolio-section img {
     width: 100vh;
-    border-top-left-radius: 10% 10%;
-    border-top-right-radius: 10% 10%;
-    border-bottom-right-radius: 10% 10%;
-    border-bottom-left-radius: 10% 10%;
     margin-left: 2px;
     margin-top: 3px;
   }
@@ -514,13 +497,11 @@ li {
   .card1 {
     border-color: #2c5606;
     border-style: solid;
-    border-radius: 30px;
   }
 
   .card2 {
     border-color: #2c5606;
     border-style: solid;
-    border-radius: 30px;
     margin-top: 2px;
     margin-bottom: 2px;
   }
@@ -528,7 +509,6 @@ li {
   .card3 {
     border-color: #2c5606;
     border-style: solid;
-    border-radius: 30px;
     width: 65%;
   }
 }
@@ -559,10 +539,15 @@ li {
   }
 }
 
-@media screen and (min-width: 376px) and (max-width: 413px) {
+@media screen and (min-width: 375px) and (max-width: 413px) {
   .portfolio-section img {
-    width: 49vh;
+    width: 42vh;
   }
+
+  .portfolio-section h1 {
+    font-size: 1.8rem;
+  }
+
   .card1 {
     margin-top: 10px;
   }
@@ -587,9 +572,13 @@ li {
   }
 }
 
-@media screen and (min-width: 200px) and (max-width: 375px) {
+@media screen and (min-width: 200px) and (max-width: 374px) {
+  .portfolio-section h1 {
+    font-size: 1.6rem;
+  }
+
   .portfolio-section img {
-    width: 48vh;
+    width: 28vh;
   }
 
   .card1 {
