--- a/src/components/stylesheets/portfolio.css
+++ b/src/components/stylesheets/portfolio.css
@@ -188,6 +188,7 @@ li {
 
   .card1 {
     width: 28%;
+    margin: 0 20px;
   }
 
   .card2 {
@@ -207,7 +208,7 @@ li {
 
   .card5 {
     width: 28%;
-    margin-right: 5px;
+    margin: 0 20px;
   }
 
   .card6 {
