--- a/src/components/stylesheets/portfolio.css
+++ b/src/components/stylesheets/portfolio.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Arvo&family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Source+Sans+Pro:wght@300&display=swap');
 
 .portfolio-section {
   display: flex;
   flex-direction: column;
   margin-left: 20px;
   text-align: left;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   margin-right: 20px;
 }
 
@@ -14,25 +14,28 @@
   flex-direction: column;
   margin-left: 20px;
   text-align: left;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-.portfolio-section h1 {
-  font-family: "Arvo";
-  margin-bottom: 25px;
-  margin-top: 30px;
-  color: #2c5606;
+.portfolio-section p {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.4rem;
+}
+
+.wordpress {
+  margin-top: 40px;
+  margin-bottom: 10px;
 }
 
 .card-title {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.4rem;
   margin-left: 10px;
   margin-top: 10px;
 }
 
 .card-text {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1rem;
   margin-left: 10px;
 }
@@ -41,10 +44,11 @@
   width: 42vh;
   margin-left: 4px;
   margin-top: 3px;
+  border-radius: 20%;
 }
 
 a.btn.btn-primary {
-  font-family: "Arvo";
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1rem;
   color: #000;
   text-decoration: none;
@@ -56,6 +60,7 @@ a.btn.btn-primary {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 45%;
 }
 a.btn.btn-primary:hover {
   transition: 0.2s;
@@ -63,49 +68,69 @@ a.btn.btn-primary:hover {
 }
 
 .card1 {
-  border-color: #2c5606;
+  border-color: #00a5cf;
+  border-radius: 20%;
   border-style: solid;
   border-width: 0.1rem;
 }
 
 .sissy-button.btn.btn-primary {
-  background-color: #b06d81;
+  background-color: #9fffcb;
+}
+.sissy-button.btn.btn-primary:hover {
+  background: #00a5cf;
 }
 
 .card2 {
-  border-color: #2c5606;
+  border-color: #9fffcb;
+  border-radius: 20%;
   border-style: solid;
   border-width: 0.1rem;
   margin-bottom: 2px;
 }
 
 .groenhartig-button.btn.btn-primary {
-  background-color: #6e7048;
+  background-color: #00a5cf;
+}
+
+.groenhartig-button.btn.btn-primary:hover {
+  background-color: #9fffcb;;
 }
 
 .card3 {
-  border-color: #2c5606;
+  border-color: #00a5cf;
+  border-radius: 20%;
   border-style: solid;
   border-width: 0.1rem;
 }
 
 .emotus-button.btn.btn-primary {
-  background-color: #ccc5b9;
+  background-color: #9fffcb;
+}
+
+.emotus-button.btn.btn-primary:hover {
+  background-color: #00a5cf;
 }
 
 .card4 {
   border-color: #2c5606;
+  border-radius: 20%;
   border-style: solid;
   margin-bottom: 2px;
   border-width: 0.1rem;
 }
 
 .birthday-button.btn.btn-primary {
-  background-color: #d9bbb1;
+  background-color: #00a5cf;
+}
+
+.birthday-button.btn.btn-primary:hover {
+  background-color: #9fffcb;
 }
 
 .card5 {
-  border-color: #2c5606;
+  border-color: #9fffcb;
+  border-radius: 20%;
   border-style: solid;
   border-width: 0.1rem;
 }
@@ -115,17 +140,24 @@ a.btn.btn-primary:hover {
 }
 
 .card6 {
-  border-color: #2c5606;
+  border-color: #00a5cf;
+  border-radius: 20%;
   border-style: solid;
   border-width: 0.1rem;
 }
 
 .eva-button.btn.btn-primary {
-  background-color: #47802b;
+  background-color: #00a5cf;
+}
+.eva-button.btn.btn-primary:hover {
+  background-color: #9fffcb;
 }
 
 .sofa-button.btn.btn-primary {
-  background-color: #b6351f;
+  background-color: #9fffcb;
+}
+.sofa-button.btn.btn-primary:hover {
+  background-color: #00a5cf;
 }
 
 .act-button.btn.btn-primary {
@@ -137,10 +169,14 @@ a.btn.btn-primary:hover {
 }
 
 .previous-experience h1 {
-  font-family: "Arvo";
+  font-family: "Oswald", sans-serif;
   margin-bottom: 5px;
   margin-top: 30px;
   color: #b06d81;
+}
+
+.list-coded li {
+  font-size: 1.4rem;
 }
 
 li {
@@ -153,6 +189,7 @@ li {
     width: 98%;
     height: 40%;
     margin-left: 3px;
+    border-radius: 40%;
   }
 
   h1 {
@@ -494,11 +531,13 @@ li {
 
   .card1 {
     border-color: #2c5606;
+    border-radius: 20%;
     border-style: solid;
   }
 
   .card2 {
     border-color: #2c5606;
+    border-radius: 20%;
     border-style: solid;
     margin-top: 2px;
     margin-bottom: 2px;
@@ -506,6 +545,7 @@ li {
 
   .card3 {
     border-color: #2c5606;
+    border-radius: 20%;
     border-style: solid;
     width: 65%;
   }
@@ -543,7 +583,7 @@ li {
   }
 
   .portfolio-section h1 {
-    font-size: 1.8rem;
+    font-size: 3rem;
   }
 
   .card1 {
@@ -567,6 +607,11 @@ li {
   }
   .card6 {
     margin-top: 10px;
+  }
+
+  .about-hi-contact {
+    margin-top: 40px;
+    margin-bottom: 20px;
   }
 }
 
