--- a/src/components/stylesheets/about.css
+++ b/src/components/stylesheets/about.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Arvo&family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Source+Sans+Pro:wght@300&display=swap');
+
+img {
+  margin:40px
+}
 
 .about-section .about-hi-img .aboutImage {
   border-top-left-radius: 75% 50%;
@@ -6,8 +10,8 @@
   border-bottom-right-radius: 75% 50%;
   border-bottom-left-radius: 50% 50%;
   height: 15%;
-  width: 15%;
-}
+  width: 25%;
+  }
 
 .about-section {
   display: flex;
@@ -15,37 +19,61 @@
   margin-left: 20px;
   margin-right: 20px;
   text-align: left;
-  font-family: "Arvo";
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .about-section p {
-  margin-top: 56px;
+  margin-top: 20px;}
+
+
+.about-work {
+  display: flex;
+  flex-direction: column;
 }
 
 li {
-  list-style-type: none;
+  list-style-type:circle;
+  margin: 10px;
 }
 
-.about-section .about-hi h1 {
+ .about-hi h1 {
   font-size: 3rem;
-  font-family: "Arvo";
+  font-family: 'Oswald', sans-serif;
   margin-bottom: 10px;
-  color: #2c5606;
+  color: #25a18e;
 }
+
+.about-hi-contact h1 {
+  font-size: 3rem;
+  font-family: 'Oswald', sans-serif;
+  margin-bottom: 10px;
+  color: #25a18e;
+  margin-bottom: 20px;
+}
+
+.about-hi-portfolio h1 {
+  font-size: 3rem;
+  font-family: 'Oswald', sans-serif;
+  margin-bottom: 10px;
+  color: #25a18e;
+}
+
 .about-section h1 {
   font-size: 1.8rem;
-  color: 1.4rem;
-  font-family: "Arvo";
+  font-family: 'Oswald', sans-serif;
 }
 
 .about-section .about-coding h1 {
-  font-family: "Arvo";
+  font-family: 'Oswald', sans-serif;
   margin-bottom: 5px;
   margin-top: 30px;
 }
 
+h2 {
+  color: #25a18e;
+}
 .about-section li {
-  font-size: 1rem;
+  font-size: 1.4rem;
 }
 
 .about-section .about-techs {
@@ -59,20 +87,27 @@ li {
   margin-left: 20px;
 }
 
+.about-slogan {
+  display: flex;
+  justify-content: center;
+  color: #00a5cf;
+  font-size: 1.8rem;
+  margin: 40px 0px }
+
 @media screen and (min-width: 1025px) {
   img {
     height: 15%;
     width: 15%;
-    margin-top: 40px;
-    margin-left: 30px;
+    margin: 40px;
+    
   }
 
   .about-hi-img {
     display: flex;
     flex-direction: row;
-    margin-bottom: 10px;
     justify-content: left;
-  }
+  }    
+  
 
   .about-coding h1 {
     display: flex;
@@ -85,15 +120,25 @@ li {
     font-size: 6rem;
   }
 
+ .about-hi-contact h1 {
+    margin-top: 40px;
+    font-size: 4rem;
+  }
+
+  .about-hi-portfolio h1 {
+   
+    font-size: 4rem;
+  }
+
   .about-section .about-name p {
-    margin-top: 230px;
-    margin-left: 40px;
+    margin-top: 150px;
     font-size: 1.4rem;
   }
   .about-section p {
     display: flex;
     justify-content: left;
     font-size: 1.4rem;
+    margin-bottom: 0px;
   }
 
   .about-section .about-techs {
@@ -109,7 +154,7 @@ li {
   img {
     height: 20%;
     width: 20%;
-    margin-top: 40px;
+    margin-top: 100px;
     margin-left: 30px;
   }
 
@@ -119,13 +164,26 @@ li {
     margin-bottom: 10px;
   }
 
+  .bubblesImage {
+    margin-top: 10px;
+  }
   .about-section .about-hi h1 {
     margin-top: 120px;
-    font-size: 8rem;
+    font-size: 6rem;
+  }
+
+   .about-hi-contact h1 {
+    margin-top: 0px;
+    font-size: 3rem;
+  }
+
+  .about-hi-portfolio h1 {
+    margin-top: 0px;
+    font-size: 3rem;
   }
 
   .about-section .about-name p {
-    margin-top: 230px;
+    margin-top: 160px;
     margin-left: 40px;
     font-size: 1.5rem;
   }
@@ -150,10 +208,19 @@ li {
   }
   .about-section .about-hi h1 {
     margin-top: 80px;
+    font-size: 4rem;
+  }
+
+.about-hi-contact h1 {
+    margin-top: 40px;
+  }
+
+  .about-hi-portfolio h1 {
+    margin-top: 0px;
   }
 
   .about-section .about-name p {
-    margin-top: 160px;
+    margin-top: 90px;
     margin-left: 40px;
   }
 
@@ -170,12 +237,30 @@ li {
 
 @media screen and (min-width: 375px) and (max-width: 414px) {
   .about-section .about-hi-img .aboutImage {
-    height: 45%;
-    width: 45%;
+    width: 55%;
   }
 
   .about-section .about-hi h1 {
     margin-top: 40px;
+    margin-bottom: 0px;
+    font-size: 4rem;
+  }
+
+  .about-hi-contact h1 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .bubblesImage {
+    margin-top: 20px;
+  }
+  .bubblesImage img{
+    height: 50%;
+    width: 50%;
+  }
+
+  .about-hi-portfolio h1 {
+    margin-top: 0px;
     margin-bottom: 0px;
   }
 
@@ -191,5 +276,9 @@ li {
   .about-section p {
     font-size: 1.4rem;
     margin-top: 30px;
+  }
+
+  ul{
+    margin:0px
   }
 }
